relaxng-dump/tests/snapshots/dump__confict-variant.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<conflictName name>
  <other>
    text
  </other>
</conflictName>
