relaxng-dump/tests/snapshots/dump__features.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<cpu>
  <arch>
    text
  </arch>
  <feature policy/>
  <features>
    <nonpae/>
    <pae/>
    <svm/>
    <vmx/>
  </features>
</cpu>
