relaxng-dump/tests/snapshots/dump__field-conflict.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<test name>
  <name>
    text
  </name>
</test>
