relaxng-dump/tests/snapshots/dump__reconnect.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<start>
  <reconnect delay enabled timeout/>
</start>
