relaxng-dump/tests/snapshots/dump__tuto13-3.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card>
    <email>
      text
    </email>
    <name>
      text
    </name>
  </card>
</addressBook>
