relaxng-dump/tests/snapshots/dump__tuto1c.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card>
    <email>
      text
    </email>
    <name>
      text
    </name>
    <note>
      text
    </note>
  </card>
</addressBook>
