relaxng-dump/tests/snapshots/dump__tuto1d.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card email familyName givenName name/>
</addressBook>
