relaxng-dump/tests/snapshots/dump__tuto2.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card>
    <email>
      text
    </email>
    <familyName>
      text
    </familyName>
    <givenName>
      text
    </givenName>
    <name>
      text
    </name>
    <note>
      text
    </note>
  </card>
</addressBook>
