relaxng-dump/tests/snapshots/dump__tuto3.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card email name/>
</addressBook>
