relaxng-dump/tests/snapshots/dump__tuto3c.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card email name>
    <email>
      text
    </email>
    <name>
      text
    </name>
  </card>
</addressBook>
